crates/core/tests/proc/svc/ctor_rval_bad_self.stderr
error[E0080]: evaluation panicked: This method looks like a constructor, but does not return ffi::Result<Self, _>
  --> tests/proc/svc/ctor_rval_bad_self.rs:13:12
   |
13 |     pub fn create() -> ffi::Result<u8, Error> {
   |            ^^^^^^ evaluation of `_` failed here

error[E0308]: mismatched types
  --> tests/proc/svc/ctor_rval_bad_self.rs:13:12
   |
13 |     pub fn create() -> ffi::Result<u8, Error> {
   |            ^^^^^^
   |            |
   |            expected `*const Service`, found `*mut u8`
   |            arguments to this enum variant are incorrect
   |
   = note: expected raw pointer `*const Service`
              found raw pointer `*mut u8`
help: the type constructed contains `*mut u8` due to the type of the argument passed
  --> tests/proc/svc/ctor_rval_bad_self.rs:13:12
   |
13 |     pub fn create() -> ffi::Result<u8, Error> {
   |            ^^^^^^ this argument influences the type of `Ok`
note: tuple variant defined here
  --> src/pattern/result.rs
   |
   |     Ok(T),
   |     ^^
